--- a/LaptopMartF/Components/Dashboard/Dashboard.css
+++ b/LaptopMartF/Components/Dashboard/Dashboard.css
@@ -5,7 +5,7 @@
 }
 .Dashboard-header{
     height:11vh;
-    width:100vw;
+    /* width:100vw; */
     background-color: rgb(177, 178, 180);
     display:flex;
     flex-direction: row;
@@ -13,3 +13,92 @@
     align-items: center;
     padding:1.56rem;
 }
+
+.footerSession{
+    height:11vh;
+    background-color: rgb(177, 178, 180); 
+}
+/* Logo */
+.FirstLetter{
+    color:rgb(27, 30, 30);
+    font-weight: 750;
+    font-size:large;
+}
+.LastLetter{
+    color:rgb(3, 51, 129);
+    font-weight: 550;
+    font-size:medium;
+}
+.Heading-laptopMart{
+    color:rgb(73, 73, 74);
+    /* font-weight: 550; */
+    font-size:larger;
+    border:2px solid rgb(59, 58, 58);
+    padding:0.6rem;
+    border-radius: 0px 9px;
+}
+/* Logo */
+
+.head-three{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap:1rem;
+}
+.InputSearch{
+    padding:1rem;
+    width:50%;
+}
+
+.InputSearch::placeholder{
+    color:darkslategrey;
+}
+
+.ProductsDivMain{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding:4rem;
+    gap:2rem;
+    justify-content: center;
+    /* align-items: center; */
+}
+.ProductsDiv{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border:1.5px solid rgb(161, 161, 161);
+    padding:3rem;
+    max-width: 250px;
+    gap:1rem;
+}
+
+.ProductsDiv:hover{
+    box-shadow: 5px 10px 18px #888888;
+}
+
+.ProductsDiv:hover {
+    transform: scale(1.1);
+  }
+
+.PaymentDiv{
+    /* width:21rem; */
+    width:8rem;
+    padding:0.4rem;
+    border-radius: 5px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2ceb25;
+  }
+  .PaymentDiv:hover,.PaymentDiv:focus{
+    background-color: #0a9905;
+    color: #0d0606;
+  }
+  .TwoButtons{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap:1rem;
+  }
